// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-radial-progress #render should render component as expected (1) 1`] = `
<gux-radial-progress screenreader-text="Uploading file">
  <template shadowrootmode="open">
    <gux-radial-loading context="modal" screenreader-text="Uploading file"></gux-radial-loading>
  </template>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (2) 1`] = `
<gux-radial-progress screenreader-text="Uploading file" value="0">
  <template shadowrootmode="open">
    <div aria-label="Uploading file" aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" role="progressbar">
      <svg class="gux-svg-container" role="presentation" viewBox="0 0 48 48">
        <circle class="gux-static-circle" cx="50%" cy="50%" r="22"></circle>
        <circle class="gux-dynamic-circle" cx="50%" cy="50%" r="22" stroke-dasharray="138.23007675795088" stroke-dashoffset="138.23007675795088" stroke-linecap="round"></circle>
        <text class="gux-percentage" dominant-baseline="central" x="50%" y="50%">
          0%
        </text>
      </svg>
    </div>
  </template>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (3) 1`] = `
<gux-radial-progress screenreader-text="Uploading file" value="10">
  <template shadowrootmode="open">
    <div aria-label="Uploading file" aria-valuemax="100" aria-valuemin="0" aria-valuenow="10" role="progressbar">
      <svg class="gux-svg-container" role="presentation" viewBox="0 0 48 48">
        <circle class="gux-static-circle" cx="50%" cy="50%" r="22"></circle>
        <circle class="gux-dynamic-circle" cx="50%" cy="50%" r="22" stroke-dasharray="138.23007675795088" stroke-dashoffset="124.4070690821558" stroke-linecap="round"></circle>
        <text class="gux-percentage" dominant-baseline="central" x="50%" y="50%">
          10%
        </text>
      </svg>
    </div>
  </template>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (4) 1`] = `
<gux-radial-progress screenreader-text="Uploading file" value="100">
  <template shadowrootmode="open">
    <div aria-label="Uploading file" aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" role="progressbar">
      <svg class="gux-svg-container" role="presentation" viewBox="0 0 48 48">
        <circle class="gux-static-circle" cx="50%" cy="50%" r="22"></circle>
        <circle class="gux-dynamic-circle" cx="50%" cy="50%" r="22" stroke-dasharray="138.23007675795088" stroke-dashoffset="0" stroke-linecap="round"></circle>
        <text class="gux-percentage" dominant-baseline="central" x="50%" y="50%">
          100%
        </text>
      </svg>
    </div>
  </template>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (5) 1`] = `
<gux-radial-progress screenreader-text="Uploading file" value="123">
  <template shadowrootmode="open">
    <gux-radial-loading context="modal" screenreader-text="Uploading file"></gux-radial-loading>
  </template>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (6) 1`] = `
<gux-radial-progress screenreader-text="Uploading file" value="200">
  <template shadowrootmode="open">
    <gux-radial-loading context="modal" screenreader-text="Uploading file"></gux-radial-loading>
  </template>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (7) 1`] = `
<gux-radial-progress max="100" screenreader-text="Uploading file" value="10">
  <template shadowrootmode="open">
    <div aria-label="Uploading file" aria-valuemax="100" aria-valuemin="0" aria-valuenow="10" role="progressbar">
      <svg class="gux-svg-container" role="presentation" viewBox="0 0 48 48">
        <circle class="gux-static-circle" cx="50%" cy="50%" r="22"></circle>
        <circle class="gux-dynamic-circle" cx="50%" cy="50%" r="22" stroke-dasharray="138.23007675795088" stroke-dashoffset="124.4070690821558" stroke-linecap="round"></circle>
        <text class="gux-percentage" dominant-baseline="central" x="50%" y="50%">
          10%
        </text>
      </svg>
    </div>
  </template>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (8) 1`] = `
<gux-radial-progress max="10" screenreader-text="Uploading file" value="10">
  <template shadowrootmode="open">
    <div aria-label="Uploading file" aria-valuemax="10" aria-valuemin="0" aria-valuenow="10" role="progressbar">
      <svg class="gux-svg-container" role="presentation" viewBox="0 0 48 48">
        <circle class="gux-static-circle" cx="50%" cy="50%" r="22"></circle>
        <circle class="gux-dynamic-circle" cx="50%" cy="50%" r="22" stroke-dasharray="138.23007675795088" stroke-dashoffset="0" stroke-linecap="round"></circle>
        <text class="gux-percentage" dominant-baseline="central" x="50%" y="50%">
          100%
        </text>
      </svg>
    </div>
  </template>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (9) 1`] = `
<gux-radial-progress max="100" screenreader-text="Uploading file" value="test">
  <template shadowrootmode="open">
    <gux-radial-loading context="modal" screenreader-text="Uploading file"></gux-radial-loading>
  </template>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (10) 1`] = `
<gux-radial-progress max="100" screenreader-text="Uploading file" value="-123">
  <template shadowrootmode="open">
    <gux-radial-loading context="modal" screenreader-text="Uploading file"></gux-radial-loading>
  </template>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (11) 1`] = `
<gux-radial-progress max="100" screenreader-text="Uploading file" value="200">
  <template shadowrootmode="open">
    <gux-radial-loading context="modal" screenreader-text="Uploading file"></gux-radial-loading>
  </template>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (12) 1`] = `
<gux-radial-progress max="test" screenreader-text="Uploading file" value="10">
  <template shadowrootmode="open">
    <gux-radial-loading context="modal" screenreader-text="Uploading file"></gux-radial-loading>
  </template>
</gux-radial-progress>
`;
